# servant-wellknown-challenge

./: .gitignore  Dockerfile  README.md  deploy.sh  servant-wellknown-challenge.cabal
src/: Main.hs
