cabal-version:       3.0
name:                servant-wellknown-challenge
version:             0.1.0.0

executable servant-wellknown-challenge
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*
                     , servant
                     , servant-server
                     , warp
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
